Changed size of main program cards, fixed band images overflow, fixed background images url

--- a/css/basic-style.css
+++ b/css/basic-style.css
@@ -80,7 +80,7 @@ div { font-family: 'Lato', sans-serif;}
 
 .get-ticket-link:hover {
   background-color: var(--secondary-color);
-  color: white;
+  color: white !important;
 }
 
 .mobile-menu {
@@ -92,7 +92,7 @@ div { font-family: 'Lato', sans-serif;}
 /* ====================================================== First Glance section ==================================================== */
 
 .first-glance {
-  background: url(/img/Coachella-Valley-Music.jpg) bottom no-repeat fixed;
+  background: url(./img/Coachella-Valley-Music.jpg) bottom no-repeat fixed;
   background-size: cover;
   padding-bottom: 30vh;
   z-index: -1;
@@ -122,7 +122,7 @@ div { font-family: 'Lato', sans-serif;}
   font-family: 'cocogooseregular', sans-serif;
   font-size: 4rem;
   text-transform: uppercase;
-  background: url(/img/etienne-martin.jpg) center no-repeat;
+  background: url(./img/etienne-martin.jpg) center no-repeat;
   background-size: 900px;
   color: transparent;
   background-clip: text;
@@ -156,7 +156,7 @@ div { font-family: 'Lato', sans-serif;}
 /* ====================================================== Main program section ==================================================== */
 
 .main-program {
-  background: url(/img/metal-texture.jpg) center repeat;
+  background: url(./img/metal-texture.jpg) center repeat;
   background-size: 700px;
 }
 
@@ -185,7 +185,7 @@ div { font-family: 'Lato', sans-serif;}
 .pf-card {
   flex-flow: row nowrap;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   padding: 1em;
   margin: 0.3em 0.8em;
   background-color: rgba(133, 133, 133, 0.4);
@@ -196,17 +196,22 @@ div { font-family: 'Lato', sans-serif;}
   outline: 3px outset white;
 }
 
+.program-features .fas { width: 16%; }
+
 .pf-card-h1 {
+  width: 30%;
+  padding: 0 1em;
   font-size: 1.3rem;
-  margin: 0 0.9em;
   font-weight: 600;
 }
 
 .pf-card-p {
+  width: 54%;
   margin-bottom: 0;
   color: var(--light-color);
   font-weight: 500;
   font-size: 12px;
+  text-align: left;
   font-family: 'cocogooselight';
 }
 
@@ -235,10 +240,6 @@ div { font-family: 'Lato', sans-serif;}
   transition: transform 1s;
 }
 
-.band-img:hover {
-  transform: scale(1.3) translateX(-10%);
-}
-
 .band-des {
   padding-left: 1.5em;
 }
@@ -261,9 +262,9 @@ div { font-family: 'Lato', sans-serif;}
   padding-bottom: 2em;
 }
 
-.partner-link { margin: 0 2em; }
+.partner-link { margin: 1em 2em; }
 
-.partner-img { width: 160px }
+.partner-img { width: 100px }
 
 @media screen and (min-width: 768px){
 
@@ -276,13 +277,23 @@ div { font-family: 'Lato', sans-serif;}
   .pf-card {
     flex-flow: column nowrap;
     justify-content: start;
-    width: 170px;
+    align-items: center;
+    width: 270px;
     margin: 0 0.2em;
   }
 
-  .pf-card-h1 { margin: 0.6em 0 0.5em; }
+  .pf-card .fas { width: auto; }
 
-  .pf-card-p { text-align: center; }
+  .pf-card-h1 {
+    width: auto;
+    margin: 0.6em 0 0.5em;
+    padding: 0;
+   }
+
+  .pf-card-p {
+    width: auto;
+    text-align: center;
+   }
 
   .mp-bottom-link {
     color: white;
@@ -293,6 +304,8 @@ div { font-family: 'Lato', sans-serif;}
 
   /* ========================================================= Bands section ========================================================= */
 
-  .band-img { width: 280px; }
+  .band-img { width: 180px; }
+
+  .band-img:hover { transform: scale(1.6) translateX(-14%); }
 
 }
